kubernetes/customer_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: areeyass/customer-service:latest
        ports:
        - containerPort: 3009
---
apiVersion: v1
kind: Service
metadata:
  name: customer-service
spec:
  selector:
    app: customer
  ports:
  - protocol: TCP
    port: 80      
    targetPort: 3009
