kubernetes/graphql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graphql-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: ronnakonsc/nestjs-graphql:server-v1
        ports:
        - containerPort: 3010
---
apiVersion: v1
kind: Service
metadata:
  name: graphql-server-service
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3010
  type: LoadBalancer
