kubernetes/ui_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  template:
    metadata:
      labels:
        app: ui
    spec:
      containers:
      - name: ui
        image: sasit48/nestjs-microservices2:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  selector:
    app: ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
